*: rip out the misbegotten srcset and all related complicated
Amazingly, srcset turns out to be broken *again* in FF/chromium. This is the last straw. Even the demonstration examples on MDN manage to not work. srcset implementations are just so totally broken, and it adds a lot of complications (look how much code this patch deletes). Scrap it all, start a writeup at https://gwern.net/design-graveyard#srcset-mobile-optimization , and if I really need small thumbnails for acceptable popup load times, then I will roll a smaller more tailored approach avoiding srcset entirely.

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8042,21 +8042,21 @@
 "~^/images/ai/2020$" "/images/ai/";
 "~^/images/2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.svg.*$" "/images/ai/2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.svg";
 "~^/images/ai/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified.png%E2%80%A6$" "/images/ai/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified.png";
-"~^/images/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.pn--768px.png.*$" "/images/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.png-768px.png";
+"~^/images/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.pn--768px.png.*$" "/images/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.png";
 "~^/images/ai/2019-l%E2%80%A6$" "/images/ai/2019-lecun-isscctalk-cake.png";
 "~^/newsletter/2020/images/ai/2020-05-02-meme-claspedarms-jukebox.png$" "/images/ai/2020-05-02-meme-claspedarms-jukebox.png";
 "~^/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.jpg$" "/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png";
-"~^/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.jpg-768px.jpg$" "/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png-768px.png";
+"~^/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.jpg-768px.jpg$" "/images/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png";
 "~^/images/ai/2020-brown-gpt3-figure1.3-meanperformancescalingcurve.png\?fill=solid$" "/images/ai/2020-brown-gpt3-figure1.3-meanperformancescalingcurve.png";
 "~^/images/ai/gp$" "/images/ai/gpt/";
-"~^/images/ai/gpt/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified%E2%80%A6$" "/images/ai/gpt/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified.png-768px.png";
+"~^/images/ai/gpt/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified%E2%80%A6$" "/images/ai/gpt/2019-11-07-amodei-aiandcompute-twodistincteras-gpt3modified.png";
 "~^/images%25252Fai%25252Fgpt%25252F2019-12-12-gpt2-abc-score-polkaebbbab.png$" "/images/ai/gpt/2019-12-12-gpt2-abc-score-polkaebbbab.png";
 "~^/2019-radford-figure4-gpt2validationloss.png$" "/images/ai/gpt/2019-radford-figure4-gpt2validationloss.png";
 "~^/2020-01-15-gpt2-preferencelearning-abc-combinedmodel-klregularized-finalrun.png$" "/images/ai/gpt/2020-01-15-gpt2-preferencelearning-abc-combinedmodel-klregularized-finalrun.png";
 "~^/images/ai/gpt/2020-06-18-karpathy-expandingbrainmeme-gpt3metalearning.jpg\&.*$" "/images/ai/gpt/2020-06-18-karpathy-expandingbrainmeme-gpt3metalearning.jpg";
 "~^/images/ai/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png-768px.png.*$" "/images/ai/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png";
 "~^/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.avif$" "/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png";
-"~^/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png-768px.pn%E2%80%A6$" "/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png-768px.png";
+"~^/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png-768px.pn%E2%80%A6$" "/images/ai/gpt/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png";
 "~^/2020-brown-figure31-gpt3scaling.png.*$" "/images/ai/gpt/2020-brown-figure31-gpt3scaling.png";
 "~^/images%25252Fai%25252Fgpt%25252F2020-brown-gpt3-figure1.2-largermodelsmetalearn.png$" "/images/ai/gpt/2020-brown-gpt3-figure1.2-largermodelsmetalearn.png";
 "~^/images/ai/gpt/2020-brown-gpt3-figure12-larger%E3%83%A2%E3%83%87%E3%83%ABsmetalearn.png.*$" "/images/ai/gpt/2020-brown-gpt3-figure12-largermodelsmetalearn.png";
@@ -8109,7 +8109,7 @@
 "~^/images/design/sidenotes/2020-tuftecss-sidenotesmarginnotes-mobilecollapse%E2%80%A6$" "/images/design/sidenotes/2020-tuftecss-sidenotesmarginnotes-mobilecollapsed.png";
 "~^/Sidenotes//images/design/sidenotes/2020-tuftecss-sidenotesmarginnotes.png$" "/images/design/sidenotes/2020-tuftecss-sidenotesmarginnotes.png";
 "~^/images/dinosaurcomics/its-not-crazy--its-delightfully-eccentric.png$" "/images/dinosaurcomics/its-not-crazy-its-delightfully-eccentric.png";
-"~^/images/dinosaurcomics/its-not-crazy--its-delightfully-eccentric.png-768px.png$" "/images/dinosaurcomics/its-not-crazy-its-delightfully-eccentric.png-768px.png";
+"~^/images/dinosaurcomics/its-not-crazy--its-delightfully-eccentric.png-768px.png$" "/images/dinosaurcomics/its-not-crazy-its-delightfully-eccentric.png";
 "~^/images/dinosaurcomics/x-x-y%5Cu003d1.png.*$" "/images/dinosaurcomics/x-x-y=1.png";
 "~^/images/2009-agarwal-pg10.png.*$" "/images/dnb/2009-agarwal-pg10.png";
 "~^/doc/2009-argumzio-pentuple-nback\.avi$" "/images/dnb/2009-argumzio-pentuple-nback.mp4";
@@ -8145,15 +8145,15 @@
 "~^/images/gan/2019-02-14-endingcredits-stylegan-zuihoutransfer-interpolation-4x4.mp4.*$" "/images/gan/stylegan/2019-02-14-endingcredits-stylegan-zuihoutransfer-interpolation-4x4.mp4";
 "~^/images/gan/stylegan/2019-02-27-sunk-stylegan-misakikurehitotransfer-4x4.mp4/index.html.*$" "/images/gan/stylegan/2019-02-27-sunk-stylegan-misakikurehitotransfer-4x4.mp4";
 "~^/images%25252Fgan%25252Fstylegan%25252F2019-03-01-stylegan-twdne-64bestsamples.jpg$" "/images/gan/stylegan/2019-03-01-stylegan-twdne-64bestsamples.jpg";
-"~^/images/gan/stylegan/2019-03-01-stylegan-twdne-64bestsamples.jpg-768px.jpg%E2%80%A6$" "/images/gan/stylegan/2019-03-01-stylegan-twdne-64bestsamples.jpg-768px.jpg";
+"~^/images/gan/stylegan/2019-03-01-stylegan-twdne-64bestsamples.jpg-768px.jpg%E2%80%A6$" "/images/gan/stylegan/2019-03-01-stylegan-twdne-64bestsamples.jpg";
 "~^/images/gan/stylegan/2019-03-02-snowyhalcy-stylegan-animefaces-tlgan-interactivewaifumodification.mp4/index.html.*$" "/images/gan/stylegan/2019-03-02-snowyhalcy-stylegan-animefaces-tlgan-interactivewaifumodification.mp4";
 "~^/images/gan/stylegan/2019-03-15-stylegan-faces-interpolation.mp4、.*$" "/images/gan/stylegan/2019-03-15-stylegan-faces-interpolation.mp4";
 "~^/images/gan/2019-02-16-stylegan-facetraining.mp4.*$" "/images/gan/stylegan/2019-03-16-stylegan-facestraining.mp4";
 "~^/images/gan/stylegan/2019-03-20-stylegan-asukatransfer.mp4/index.html.*$" "/images/gan/stylegan/2019-03-20-stylegan-asukatransfer.mp4";
 "~^/images/gan/stylegan/2019-03-20-stylegan-holo-interpolation.mp4/index.html.*$" "/images/gan/stylegan/2019-03-20-stylegan-holo-interpolation.mp4";
-"~^/images/gan/2019-03-22-stylegan-danbooru2018-nsheppard-trainingsample-014204.jpg-768px.jpg$" "/images/gan/stylegan/2019-03-22-stylegan-danbooru2018-nshepperd-trainingsample-014204.jpg-768px.jpg";
-"~^/images/gan/2019-aydaeo-stylegan-transferlearning-westernportraitfaces-1.png-768px.png$" "/images/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-1.png-768px.png";
-"~^/images/gan/2019-aydaeo-stylegan-transferlearning-westernportraitfaces-2.png-768px.png$" "/images/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-2.png-768px.png";
+"~^/images/gan/2019-03-22-stylegan-danbooru2018-nsheppard-trainingsample-014204.jpg-768px.jpg$" "/images/gan/stylegan/2019-03-22-stylegan-danbooru2018-nshepperd-trainingsample-014204.jpg";
+"~^/images/gan/2019-aydaeo-stylegan-transferlearning-westernportraitfaces-1.png-768px.png$" "/images/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-1.png";
+"~^/images/gan/2019-aydaeo-stylegan-transferlearning-westernportraitfaces-2.png-768px.png$" "/images/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-2.png";
 "~^/images/gan/stylegan/2020-01-19-ganso-stylegan2-arknights-ptilopsis-interpolation.mp4/index.html.*$" "/images/gan/stylegan/2020-01-19-ganso-stylegan2-arknights-ptilopsis-interpolation.mp4";
 "~^/\&quot\;/images/gan/2020-05-06-stylegan2-arfafax-tfdne-9xgrid.png.*$" "/images/gan/stylegan/2020-05-06-stylegan2-arfafax-tfdne-9xgrid.png";
 "~^/images/gan/stylegan/2020-12-30-shipblazer420-stylegan-rezeroemilia-interpolations.mp4/index.html.*$" "/images/gan/stylegan/2020-12-30-shipblazer420-stylegan-rezeroemilia-interpolations.mp4";
@@ -8177,7 +8177,7 @@
 "~^/1993-tesser-table1-politicalattitudesheritability.png.*$" "/images/genetics/heritable/1993-tesser-table1-politicalattitudesheritability.png";
 "~^/2010-hatemi-table3-politicalattitudesheritability.png.*$" "/images/genetics/heritable/2010-hatemi-table3-politicalattitudesheritability.png";
 "~^/2018-inouye-cad-riskprediction.png$" "/images/genetics/heritable/2018-inouye-cad-riskprediction.png";
-"~^/images/genetics/heritable/2018-wray-figure1-betweenindividualpolygenicdifferences-jpg-768px.jpg$" "/images/genetics/heritable/2018-wray-figure1-betweenindividualpolygenicdifferences.jpg-768px.jpg";
+"~^/images/genetics/heritable/2018-wray-figure1-betweenindividualpolygenicdifferences-jpg-768px.jpg$" "/images/genetics/heritable/2018-wray-figure1-betweenindividualpolygenicdifferences.jpg";
 "~^/images/heritable$" "/images/genetics/heritable/index";
 "~^/images/iq-gcta-forest.png$" "/images/genetics/iq-gcta-forest.png";
 "~^/images/iq-hces-childhoodiq\.png$" "/images/genetics/iq-hces-childhoodiq.png";
@@ -8463,7 +8463,7 @@
 "~^/images/20130703-20140102-traffic-history.png.*$" "/images/traffic/20130703-20140102-traffic-history.png";
 "~^/images/2013-11-30-gwernnet-hitsovertime.png.*$" "/images/traffic/2013-11-30-gwernnet-hitsovertime.png";
 "~^/traffic/2013-benfords-law.png$" "/images/traffic/2013-benfords-law.png";
-"~^/traffic/2013-benfords-law.png-768px.png$" "/images/traffic/2013-benfords-law.png-768px.png";
+"~^/traffic/2013-benfords-law.png-768px.png$" "/images/traffic/2013-benfords-law.png";
 "~^/images/2013-july-darcs-history.png.*$" "/images/traffic/2013-july-darcs-history.png";
 "~^/images/20140103-20140702-traffic-history.png.*$" "/images/traffic/20140103-20140702-traffic-history.png";
 "~^/images/20140703-20150103-traffic-history.png.*$" "/images/traffic/20140703-20150103-traffic-history.png";
@@ -9294,7 +9294,7 @@
 "~^/images/logo-original.svg.back1.*$" "/static/img/logo/logo-smooth.svg";
 "~^/images/logo-whitebg-large-border.png.*$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^https:/www.gwern.net/static/img/logo/logo-whitebg-large-border.png$" "/static/img/logo/logo-whitebg-large-border.png";
-"~^/static/img/logo/logo-whitebg-large-border.png-530px.png.*$" "/static/img/logo/logo-whitebg-large-border.png-530px.jpg";
+"~^/static/img/logo/logo-whitebg-large-border.png-530px.png.*$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^/static/img/small_asc.gif$" "/static/img/tablesorter/tablesorter-asc.gif";
 "~^/static/img/bg.gif$" "/static/img/tablesorter/tablesorter-bg.gif";
 "~^/static/img/small_desc.gif$" "/static/img/tablesorter/tablesorter-desc.gif";
@@ -11067,7 +11067,7 @@
 "~^/doc/genetics/2013-beaver\.pdf.*$" "/doc/genetics/heritable/2013-beaver.pdf";
 "~^/doc/genetics/2012-ntzani\.pdf.*$" "/doc/genetics/heritable/correlation/2012-ntzani.pdf";
 "~^/doc/genetics/2010-turkaspa\.pdf.*$" "/doc/genetics/selection/2010-turkaspa.pdf";
-"~^/doc/fiction/humor/dinosaur-comics/free-penis-enlarger-50.-value.png-530px.jpg$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollars-value.png-530px.jpg";
+"~^/doc/fiction/humor/dinosaur-comics/free-penis-enlarger-50.-value.png-530px.jpg$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollars-value.png";
 "~^/doc/dnb/2012-perham.pdfg$" "/doc/music/music-distraction/2012-perham.pdf";
 "~^/doc/dnb/2010-judde\.pdf.*$" "/doc/music/music-distraction/2010-judde.pdf";
 "~^/doc/design/rubrication/$" "/doc/design/typography/rubrication/index";
@@ -11217,7 +11217,7 @@
 "~^/doc/psychology/writing/2018-10-27-%C3%83%E2%80%9A%C3%82%C2%BF$" "/doc/psychology/writing/2018-10-27-googlesurveys-morningwriting.csv";
 "~^/doc/personal/2011-gwern-yourmorals.org/contact_experimenter.php$" "/static/404";
 "~^/doc/nootropics/1990-schrauzer\.pdf.*$" "/doc/psychiatry/lithium/1990-schrauzer.pdf";
-"~^/doc/music/foxtailgrassstudio-cattleya%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-%FF%FF%FF-04.jpg-768px.jpg$" "/doc/music/foxtailgrassstudio-cattleya????-?-04.jpg-768px.jpg";
+"~^/doc/music/foxtailgrassstudio-cattleya%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-%FF%FF%FF-04.jpg-768px.jpg$" "/doc/music/foxtailgrassstudio-cattleya????-?-04.jpg";
 "~^/doc/modafinil/favicon.ico$" "/static/img/favicon.png";
 "~^/doc/math/favicon.ico$" "/static/img/favicon.png";
 "~^/doc/logo/logo-whitebg-large-border.png$" "/static/img/logo/logo-whitebg-large-border.png";
