begin factoring out gwern.net-specific config information from all the Haskell files to reduce churn/increase readability of the general code; rename QuoteOfTheDay.hs -> XOfTheDay.hs

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9331,3 +9331,5 @@ default "";
 "~^/doc/economics/1997-freygeeare97.pdf.*$" "/doc/economics/1997-frey.pdf";
 "~^/doc/ai/nn/1986-rumelhart.pdf.*$" "/doc/ai/nn/fully-connected/1986-rumelhart.pdf";
 "~^/doc/psychology/willpower/2022-ledform.html.*$" "/doc/psychology/willpower/2022-ledford.html";
+"~^/static/build/QuoteOfTheDay.hs$" "~^/static/build/XOfTheDay.hs$"
+"~^/static/build/QuoteOfTheDay.hs.html$" "~^/static/build/XOfTheDay.hs.html$"
