--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9333,3 +9333,6 @@ default "";
 "~^/doc/psychology/willpower/2022-ledform.html.*$" "/doc/psychology/willpower/2022-ledford.html";
 "~^/static/build/QuoteOfTheDay.hs$" "~^/static/build/XOfTheDay.hs$"
 "~^/static/build/QuoteOfTheDay.hs.html$" "~^/static/build/XOfTheDay.hs.html$"
+"~^/doc/economics/automation/2022-munroe-xkcd-2565latency.png.*$" "/doc/economics/automation/2022-01-07-xkcd-2565-latency.png";
+"~^/static/build/static/upload$" "/static/build/static/upload.sh";
+"~^/static/build/static/upload.html$" "/static/build/static/upload.sh.html";
