--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -102,7 +102,7 @@ server {
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
         ## stripping query parameters:
-        rewrite ^/static/css/fonts\.css(?<version>\?v=[0-9]+)$ /static/css/fonts-VERSIONED.css$version permanent;
+        rewrite ^/static/css/fonts.css(\?v=[0-9]+)?$ /static/css/fonts-VERSIONED.css last;
         rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
         rewrite ^/(?<original>.*)\?chat$ /$original permanent;
         rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
