--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11482,6 +11482,63 @@
 "~^/doc/culture/19.pdf.*$" "/doc/culture/index";
 "~^/doc/sociology/1963calhoun.*$" "/doc/sociology/1963-calhoun.pdf";
 "~^/doc/src/2017-moeller.pdf.*$" "/doc/darknet-market/2017-moeller.pdf";
+"~^/Alignment$" "/doc/reinforcement-learning/safe/index";
+"~^/Chinese-OpenAI-Community$" "/static/404";
+"~^/Crops\?.*$" "/crops";
+"~^/Curated-AI-Generated-Pornography-Collection$" "/static/404";
+"~^/DALL-E。.*$" "/DALL-E";
+"~^/GAN-breeds$" "https://www.joelsimon.net/ganbreeder.html";
+"~^/GAN-models$" "/doc/ai/nn/gan/index";
+"~^/Godel-machines$" "https://en.wikipedia.org/wiki/G%C3%B6del_machine";
+"~^/Subscripts.html$" "/subscript";
+"~^/TensorFlow-NLPro$" "https://www.tensorflow.org/tfmodels/nlp";
+"~^/doc/2006-frenchwords-lemmatized.txt$" "/static/404";
+"~^/doc/anime/eva/K-koh\.pdf.*$" "/doc/anime/eva/2010-koh.pdf";
+"~^/doc/design/1908-loos\.pdf.*$" "/doc/design/1910-loos.pdf";
+"~^/doc/iq/MTk5M.*$" "/doc/iq/index";
+
+"~^/doc/psychology/education/1956-bloom-taxonomyofeducationalobjectives-handbook1\.pdf.*$" "http://libgen.rs/book/index.php?md5=7518B9017EDA730AB630E67035F501D0";
+"~^/doc/psychology/okcupid/howyourrthemessagesyouget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/sociology/1959-french\.pdf.*$" "/static/404";
+"~^/doc/sociology/1962-calhoun.pdfA.*$" "/doc/sociology/1962-calhoun.pdf";
+"~^/doc/spacedrepetition/2016-ebbinghaus\.pdf.*$" "/doc/spaced-repetition/index";
+"~^/doc/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdfMcKown.*$" "/doc/statistics/bias/1968-rosenthal-pygmalionintheclassroom.pdf";
+"~^/gpt-4\?.*$" "/gpt-4";
+"~^/metadata/annotation/backlink/https://mathstodon.xyz/@tao/110172426733603359.html$" "/metadata/annotation/backlink/https%3A%2F%2Fmathstodon.xyz%2F%40tao%2F110172426733603359.html";
+"~^/metadata/annotations/similars/https://github.com/nyu-mll/pretraining-learning-curves/blob/main/When Do You Need Billions of Words of Pretraining Data.pdf.html$" "/metadata/annotation/similar/https%3A%2F%2Fgithub.com%2Fnyu-mll%2Fpretraining-learning-curves%2Fblob%2Fmain%2FWhen%2520Do%2520You%2520Need%2520Billions%2520of%2520Words%2520of%2520Pretraining%2520Data.pdf.html";
+"~^/static/404\?.*$" "/static/404";
+"~^/tags$" "/doc/index";
+"~^/nsfw$" "/index";
+"~^/DALLE-2-for-fun$" "/dall-e";
+"~^/dannbooru2021$" "/danbooru2021";
+"~^/tag$" "/doc/index";
+"~^/DMN-survival$" "/dnm-survival";
+"~^/doc/ai/2020-walton\.pdf.*$" "https://play.aidungeon.io/main/home";
+"~^/doc/2016-havlicek\.pdf.*$" "/doc/biology/2016-havlicek.pdf";
+"~^/doc/fiction/science-fiction/1986-moore-watchmen-chapter5-watchmaker\.pdf.*$" "/doc/fiction/science-fiction/1986-moore-watchmen-chapter4-watchmaker.pdf";
+"~^/doc/genetics/2016-liu-2\.pdf.*$" "/doc/genetics/editing/2016-liu-2.pdf";
+"~^/doc/2005-james\.pdf.*$" "/doc/nootropic/caffeine/2005-james.pdf";
+"~^/doc/psychology/okcupid/howyourraceatthemessagesyouget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/gpt-3/index.html$" "/doc/ai/nn/transformer/gpt/index";
+"~^/static/index.html$" "https://github.com/gwern/gwern.net/";
+"~^/Theory$" "/silk-road";
+"~^/GPT-4$" "/gpt-4";
+"~^/gpt4$" "/gpt-5";
+"~^/high$" "/doc/ai/highleyman/index";
+"~^/mouse-utopia7$" "/mouse-utopia";
+"~^/GPT-3-anime$" "/twdne#gpt-3";
+"~^/AI-chan$" "/index";
+"~^/Embryo$" "/embryo-selection";
+"~^/,e$" "/index";
+"~^/DALLE-demo$" "https://openai.com/blog/dall-e/";
+"~^/DALLE-mini$" "https://wandb.ai/dalle-mini/dalle-mini/reports/DALL-E-mini--Vmlldzo4NjIxODA";
+"~^/doc/economics/2018-creditsuisse.pdf.*$" "https://www.credit-suisse.com/media/assets/corporate/docs/about-us/media/media-release/2018/02/giry-summary-2018.pdf";
+"~^/doc/dnb/1976-parente.pdf.*$" "/doc/music/music-distraction/1976-parente.pdf";
+"~^/doc/2013-cicadas/.*$" "/doc/personal/2013-cicadas/index";
+"~^/ai-generated-anime.*$" "/face";
+"~^/doc/2002-boehne.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/2002-boehne.pdf";
+"~^/Modus.*" "/modus";
+"~^/3D.*file.*:/categories.*$" "/doc/darknet-markets/silk-road/1/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16935,6 +16992,17 @@
 "~^truffle-house.*$" "https://truffle-house.co.uk/";
 "~^/j49v.*$" "/static/404";
 "~^/.*javascript:void.*$" "/static/404";
+"~^/shuju.*$" "/static/404";
+"~^/modirebimeh.*$" "/static/404";
+"~^/mateenbeat.*$" "/static/404";
+"~^/ghantalele.*$" "/static/404";
+"~^/ctxt.*$" "/static/404";
+"~^/boosty.*$" "/static/404";
+"~^/visa-inde.*$" "/static/404";
+"~^/nextminute123.*$" "/static/404";
+"~^/.*\;%0a\;%0a\;%0a\;.*$" "/static/404";
+"~^/spi-blog.*$" "/static/404";
+"~^/srsrch.synology.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
