--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9331,8 +9331,16 @@ default "";
 "~^/doc/economics/1997-freygeeare97.pdf.*$" "/doc/economics/1997-frey.pdf";
 "~^/doc/ai/nn/1986-rumelhart.pdf.*$" "/doc/ai/nn/fully-connected/1986-rumelhart.pdf";
 "~^/doc/psychology/willpower/2022-ledform.html.*$" "/doc/psychology/willpower/2022-ledford.html";
-"~^/static/build/QuoteOfTheDay.hs$" "~^/static/build/XOfTheDay.hs$"
-"~^/static/build/QuoteOfTheDay.hs.html$" "~^/static/build/XOfTheDay.hs.html$"
+"~^/static/build/QuoteOfTheDay.hs$" "/static/build/XOfTheDay.hs";
+"~^/static/build/QuoteOfTheDay.hs.html$" "/static/build/XOfTheDay.hs.html";
 "~^/doc/economics/automation/2022-munroe-xkcd-2565latency.png.*$" "/doc/economics/automation/2022-01-07-xkcd-2565-latency.png";
 "~^/static/build/static/upload$" "/static/build/static/upload.sh";
 "~^/static/build/static/upload.html$" "/static/build/static/upload.sh.html";
+"~^/static/img/asterism-triplewhitestar.svg.*$" "/static/img/ornament/asterism-triplewhitestar.svg";
+"~^/static/img/icon/japanesecrest-tsukinihoshi-dottedmoon.svg.*$" "/static/img/ornament/japanesecrest-tsukinihoshi-dottedmoon.svg";
+"~^/static/img/icon/sequential-nav-icons-arabesque.svg.*$" "/static/img/ornament/sequential-nav-icons-arabesque.svg";
+"~^/static/img/icon/single-black-star.svg.*$" "/static/img/ornament/single-black-star.svg";
+"~^/static/img/icon/single-white-star-rotated.svg.*$" "/static/img/ornament/single-white-star-rotated.svg";
+"~^/static/img/icon/single-white-star.svg.*$" "/static/img/ornament/single-white-star.svg";
+"~^/static/img/icon/sun-verginasun-black.svg.*$" "/static/img/ornament/sun-verginasun-black.svg";
+"~^/static/img/icon/swissspiralroll.svg.*$" "/static/img/ornament/swissspiralroll.svg";
