tired of the Nitter mirror churn leading to lots of global rewrites, so just use the existing LA link-transform logic to archive the Nitter equivalents of Twitter.com links (so if/when the current Nitter mirror goes down, only two places to update - the LA rewrite, and the doc/www/nitter/ directory name to avoid needing to create all-new archives)

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7487,10 +7487,10 @@
 "~^/item\?id=18675280.*$" "https://news.ycombinator.com/item?id=18675280";
 "~^/item\?id=18708876.*$" "https://news.ycombinator.com/item?id=18708876";
 "~^/item\?id=20366039.*$" "https://news.ycombinator.com/item?id=20366039";
-"~^/nitter.hu$" "https://nitter.moomoo.me/";
-"~^/noamchomskyT/status/952716484123529216$" "https://nitter.moomoo.me/noamchomskyt/status/952716484123529216";
-"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.moomoo.me/search-advanced?lang=en";
-"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.moomoo.me/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
+"~^/nitter.hu$" "https://twitter.com/";
+"~^/noamchomskyT/status/952716484123529216$" "https://twitter.com/noamchomskyt/status/952716484123529216";
+"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://twitter.com/search-advanced?lang=en";
+"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://twitter.com/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
 "~^/noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html.*$" "https://noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html";
 "~^/search\?hl\=en\&q=henry\+darger.*$" "https://nostalgebraist.livejournal.com/68532.html";
 "~^/ttft/print/TTFT\.pdf.*$" "https://numinous.productions/ttft/print/TTFT.pdf";
