--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -9,10 +9,10 @@ map $request_uri $new_uri {
 
 ## Rewrite https://www.gwern.net → https://gwern.net
 server{
-    #redirect www to non-www
+    #redirect www to non-www, and all other sub-domains as well (I sometimes get spurious traffic to `direct.gwern.net` etc)
     listen 80;
     listen 443 ssl;
-    server_name www.gwern.net;
+    server_name *.gwern.net;
 
     ssl_certificate /home/gwern/ssl/cloudflare.cert;
     ssl_certificate_key /home/gwern/ssl/cloudflare.key;
