--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11496,7 +11496,6 @@
 "~^/doc/anime/eva/K-koh\.pdf.*$" "/doc/anime/eva/2010-koh.pdf";
 "~^/doc/design/1908-loos\.pdf.*$" "/doc/design/1910-loos.pdf";
 "~^/doc/iq/MTk5M.*$" "/doc/iq/index";
-
 "~^/doc/psychology/education/1956-bloom-taxonomyofeducationalobjectives-handbook1\.pdf.*$" "http://libgen.rs/book/index.php?md5=7518B9017EDA730AB630E67035F501D0";
 "~^/doc/psychology/okcupid/howyourrthemessagesyouget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
 "~^/doc/sociology/1959-french\.pdf.*$" "/static/404";
@@ -11539,6 +11538,12 @@
 "~^/doc/2002-boehne.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/2002-boehne.pdf";
 "~^/Modus.*" "/modus";
 "~^/3D.*file.*:/categories.*$" "/doc/darknet-markets/silk-road/1/index";
+"~^/dalle-demos$" "/dall-e";
+"~^/doc/dnb/1945-henderson\.pdf.*$" "/doc/music/music-distraction/1945-henderson.pdf";
+"~^/doc/Sunk-cost$" "/sunk-cost";
+"~^/doc/Wikipedia-and-Other-Wikis$" "/wikipedia-and-other-wikis";
+"~^/doc/genetics/selection/artificial/1940-tyron-3.pdf.*$" "/doc/genetics/selection/artificial/1940-tryon-3.pdf";
+"~^/doc/coin-flip/index.html.*$" "/coin-flip";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -17003,6 +17008,13 @@
 "~^/.*\;%0a\;%0a\;%0a\;.*$" "/static/404";
 "~^/spi-blog.*$" "/static/404";
 "~^/srsrch.synology.*$" "/static/404";
+"~^/viralpressnews.*$" "/static/404";
+"~^/unio.es.*$" "/static/404";
+"~^/patuvame.net/.*$" "/static/404";
+"~^/.*gefest-h.*$" "/static/404";
+"~^/metaboflex.*$" "/static/404";
+"~^/haran.*$" "/static/404";
+"~^/batchgeo.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
